--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,121 @@
-.App {
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-size: medium;
+  background-color: black;
+  
+}
+span {
+  color:blanchedalmond;
+}
+
+p{
+  font-family: 'Russo One', sans-serif;;
+  color: #fff;
+}
+.timer{
+ display: flex;
+ flex: column;
+ align-items: center;
+ justify-content: center;
+ padding-bottom: 7em;
+ width: 100%;
+ height: 100%;
+}
+.timer div:first-child{
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.timer div:first-child p{
+
+  color: rgb(250, 54, 19);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.timer div:last-child {
+
+border-radius: 3px;
+display: grid;
+grid-template-columns: repeat(7, 1fr);
+margin-top: 3em;
+padding: 3em;
+text-align: center;
+}
+
+section p:first-child, .timer div:last-child span{
+  font-size: 3em;
+} 
+
+@media screen and (max-width:480px){
+  .timer div:last-child{
+    margin-left: 2em;
+    margin-right: 2em;
+    padding: 3em 1em;
   }
+ 
+ 
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+
+.contraeña{
+ display: flex;
+ flex: column;
+ align-items: center;
+ justify-content: center;
+ padding-bottom: 7em;
+ width: 100%;
+ height: 100%;
+}
+input::placeholder {
+  color: rgba(250, 84, 7, 0.945);
+  font-size: 1rem;
+ 
+  
+}
+
+
+#contenidocodigo{
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-top: 20%;
+
+    
 }
 
-.App-link {
-  color: #61dafb;
+::placeholder{
+  position: fixed;
+  background: #ffffff;
+
+  
+  
+  
+  font-family: 'Orbitron', sans-serif;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+button {
+  
+  transition: width .5s;
+  font-family: 'Orbitron', sans-serif;
+  font-weight: bold;
+  font-size: 20px;
+  background: rgb(10, 10, 10);
+  border: none;
+  border-radius: 100px;
+  padding: 10px 25px;
+  color: #f06423;
+  letter-spacing: 1px;
+  cursor: pointer;
+  box-shadow: 5px 5px 10px 0px rgba(243, 180, 44, 0.2),
+    inset -5px -5px 10px 0px rgba(240, 69, 26, 0.726);
+  outline: none;
+  box-sizing: border-box;
+  width: 153px;
+  height: 51px;
+  
   }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
+  
+  
